Added support for videos and pictures

--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/image.png" type="image/png">
-    <title>Aaroh4</title>
+    <title>Cat site</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to My Website</h1>
+	<img width="320" height="240" src="images/image.png" alt="Cat"> 
+	<video width="400" height="300" controls>
+		<source src="/video.mp4" type="video/mp4">
+	</video>
 </body>
 </html>
