--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,8 @@
 	<video width="400" height="300" controls>
 		<source src="/video.mp4" type="video/mp4">
 	</video>
-	<button>Delete video</button>
+	<br />
+	<button>Delete image</button>
 	<script type="text/javascript" src="delete.js"></script>
 </body>
 </html>
