Added new form.html page and style sheet

--- a/www/index.html
+++ b/www/index.html
@@ -16,5 +16,8 @@
 	<br />
 	<button>Delete image</button>
 	<script type="text/javascript" src="delete.js"></script>
+	<br>
+	<br>
+	<a href="./form.html">Fill a form</a>
 </body>
 </html>
