--- a/www/form.html
+++ b/www/form.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Welcome to fill this amazing form</h1>
 	<form action="./cgi-bin/formAdd.py" method="post">
-		<label for="input">Enter something: <input type="text"/></label>
-		<input type="submit" name="input" value="Submit" />
+		<label for="name">Enter name:</label>
+		<input type="text" id="name" name="input" />
 	</form>
 </body>
 </html>
