Made directory listing work properly with the root

--- a/dir.html
+++ b/dir.html
@@ -4,10 +4,7 @@
  </head>
  <body>
  <ol>
-<li><a href=images>"./www/images"</a> </li>
-<li><a href=index.html>"./www/index.html"</a> </li>
-<li><a href=styles.css>"./www/styles.css"</a> </li>
-<li><a href=video.mp4>"./www/video.mp4"</a> </li>
+<li><a href=images/image.png>"./www/images/image.png"</a> </li>
 </ol>
  <h1>Welcome to My Website</h1>
  </body>
