--- a/www/html/index.html
+++ b/www/html/index.html
@@ -9,15 +9,14 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-	<img width="320" height="240" src="images/image.png" alt="Cat"> 
+	<img width="320" height="240" src="www/images/image.png" alt="Cat"> 
 	<video width="400" height="300" controls>
 		<source src="video.mp4" type="video/mp4">
 	</video>
 	<br />
-	<button>Delete image</button>
-	<script type="text/javascript" src="delete.js"></script>
+	<button action="./cgi-bin/test.php" method="post">Print message</button>
 	<br>
 	<br>
-	<a href="./form.html">Fill a form</a>
+	<a href="www/form.html">Fill a form</a>
 </body>
 </html>
