Some code for cgis

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -14,9 +14,9 @@
 		<source src="video.mp4" type="video/mp4">
 	</video>
 	<br />
-	<button action="./cgi-bin/test.php" method="post">Print message</button>
-	<br>
-	<br>
+	<form action="www/cgi-bin/test.php" method="post">
+		<button type="submit">Print message</button>
+	</form>
 	<a href="www/form.html">Fill a form</a>
 </body>
 </html>
