adding print and changing root in .cfg file and remowing www/ from image path

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-	<img width="320" height="240" src="www/images/image.png" alt="Cat"> 
+	<img width="320" height="240" src="images/image.png" alt="Cat">
 	<video width="400" height="300" controls>
 		<source src="video.mp4" type="video/mp4">
 	</video>
