--- a/www/html/index.html
+++ b/www/html/index.html
@@ -14,7 +14,7 @@
 		<source src="video.mp4" type="video/mp4">
 	</video>
 	<br />
-	<form action="www/cgi-bin/test.php" method="post">
+	<form action="../www/cgi-bin/save.php" method="post">
 		<button type="submit">Print message</button>
 	</form>
 	<a href="www/form.html">Fill a form</a>
