adding few try catches

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/image.png" type="image/png">
     <title>Cat site</title>
-    <link rel="stylesheet" href="www/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to My Website</h1>
