--- a/www/html/index.html
+++ b/www/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/image.png" type="image/png">
     <title>Cat site</title>
-    <link rel="stylesheet" href="www/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to My Website</h1>
@@ -14,14 +14,14 @@
 		<source src="video.mp4" type="video/mp4">
 	</video>
 	<br />
-	<form action="../www/cgi-bin/save.php" method="post">
+	<form action="cgi-bin/save.php" method="post">
 		<label for="name">Append message POST</label>
 		<input type="text" id="name" name="input" />
 	</form>
-	<form action="../www/cgi-bin/save.php" method="get">
+	<form action="cgi-bin/save.php" method="get">
 		<label for="name">GET method</label>
 		<input type="text" id="name" name="input" />
 	</form>
-	<a href="www/form.html">Fill a form</a>
+	<a href="form.html">Fill a form</a>
 </body>
 </html>
