Fixed cgi path things

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -14,11 +14,11 @@
 		<source src="video.mp4" type="video/mp4">
 	</video>
 	<br />
-	<form action="cgi-bin/save.php" method="post">
+	<form action="../cgi-bin/save.php" method="post">
 		<label for="name">Append message POST</label>
 		<input type="text" id="name" name="input" />
 	</form>
-	<form action="cgi-bin/save.php" method="get">
+	<form action="../cgi-bin/save.php" method="get">
 		<label for="name">GET method</label>
 		<input type="text" id="name" name="input" />
 	</form>
