Trying to improve pythom script

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -18,7 +18,7 @@
 		<label for="name">Append message POST</label>
 		<input type="text" id="name" name="input" />
 	</form>
-	<form action="../cgi-bin/save.php" method="get">
+	<form action="../cgi-bin/formAdd.py" method="get">
 		<label for="name">GET method</label>
 		<input type="text" id="name" name="input" />
 	</form>
