--- a/www/408.html
+++ b/www/408.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>408 Unsupported Media Type</title>
+		<title>408 Request Timeout</title>
 		<style>
 			body {background-color: powderblue;}
 			h1 {color: blue; font-style: italic; text-align: center;}
 		</style>
 	</head>
 	<body>
-		<h1>408 Unsupported Media Type</h1>
+		<h1>408 Request Timeout</h1>
 	</body>
 </html>
