--- a/www/forbid.html
+++ b/www/forbid.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>404 Page not found</title>
+		<title>Change the chmod</title>
 		<style>
 			body {background-color: powderblue;}
 			h1 {color: blue; font-style: italic; text-align: center;}
 		</style>
 	</head>
 	<body>
-		<h1>404 Page not found</h1>
+		<h1>change the chmod</h1>
 	</body>
 </html>
