Removed extra cout and fixed missing letter

--- a/www/forbidden.html
+++ b/www/forbidden.html
@@ -8,6 +8,6 @@
 		</style>
 	</head>
 	<body>
-		<h1>Ths should be forbidden if chmod</h1>
+		<h1>This should be forbidden if chmod</h1>
 	</body>
 </html>
