--- a/www/html/index.html
+++ b/www/html/index.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/image.png" type="image/png">
     <title>Cat site</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-	<img width="320" height="240" src="images/image.png" alt="Cat">
-	<video width="400" height="300" controls>
-		<source src="video.mp4" type="video/mp4">
-	</video>
-	<br />
+    <h1>Welcome to test the CGI</h1>
 	<form action="../cgi-bin/save.php" method="post">
 		<label for="name">Append message POST</label>
 		<input type="text" id="name" name="input" />
